# age-hier

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum
.github/actions/: update.sh
.github/workflows/: flake-check.yml  update-flake.yml
cmd/age-hier-derive/: main.go
go/: go.mod  go.sum
go/cmd/age-hier-derive/: main.go
go/impl/: mod.go  mod_test.go
integration/: go.mod  spec_test.go
integration/testdata/: 24words.txt  trivial.txt
nix/: devshell.nix
nix/checks/: age-hier-go-integration.nix  age-hier-rust-integration.nix
rust/: README.md
rust/src/: lib.rs
spec/: index.md
src/: lib.rs
testdata/: index0.txt  index1.txt  nopassphrase.txt
